--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
         "axios": "^1.6.4",
         "bootstrap": "^5.3.3",
         "bootstrap-icons": "^1.11.3",
+        "jquery": "^3.7.1",
         "laravel-vite-plugin": "^1.0",
         "postcss": "^8.4.38",
         "sass": "^1.56.1",
+        "select2": "^4.1.0-rc.0",
         "tailwindcss": "^3.4.4",
         "vite": "^5.0"
     },
