--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "vite": "^5.0"
     },
     "dependencies": {
-        "bootstrap-select": "^1.13.18"
+        "bootstrap-select": "^1.13.18",
+        "select2-bootstrap-5-theme": "^1.3.0"
     }
 }
