--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     },
     "dependencies": {
         "bootstrap-select": "^1.13.18",
+        "resources": "^0.4.3",
         "select2-bootstrap-5-theme": "^1.3.0"
     }
 }
